codedeploy_terraform/alb.tf

# 보안 그룹 생성
resource "aws_security_group" "elb_sg" {
  name        = "elb_sg"
  description = "Allow inbound traffic on port 80"
  vpc_id      = aws_vpc.my_vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "terraform-sg"
    managedby = "terraform"
  }
}

resource "aws_lb" "example" {
  name = "terraform-asg-example"
  load_balancer_type = "application"
  subnets = [aws_subnet.my_subnet_a.id, aws_subnet.my_subnet_c.id]
  security_groups = [aws_security_group.elb_sg.id]
}

resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.example.arn
  port = 80
  protocol = "HTTP"
  default_action {
    type = "fixed-response" 
    fixed_response {
      content_type = "text/plain"
      message_body = "404: page not found"
      status_code = 404
    }
  }
}

resource "aws_lb_listener_rule" "asg" {
  listener_arn = aws_lb_listener.http.arn
  priority = 100
  condition {
    path_pattern {
      values = ["*"]
    }
  }
  action {
    type = "forward"
    target_group_arn = aws_lb_target_group.asg.arn
  } 
}

resource "aws_lb_target_group" "asg" {
  name = "terraform-asg-example"
  port = 80
  protocol = "HTTP"
  vpc_id = aws_vpc.my_vpc.id
  # health_check {
  #   path = "/"
  #   protocol = "HTTP"
  #   matcher = "200"
  #   interval = 15
  #   timeout = 3
  #   healthy_threshold = 2
  #   unhealthy_threshold = 2
  # }
}
